--- a/Templates/mahasiswa/data-mahasiswa.html
+++ b/Templates/mahasiswa/data-mahasiswa.html
@@ -3,7 +3,7 @@
 
   <h2 class="display-6">Manajemen Data Mahasiswa</h2>
   <hr>
-  <a href="/mahasiswa/tambah" class="btn btn-dark mb-4 mt-2"> Tambah Mahasiswa</a>
+  <a href="/mahasiswa/tambah" class="btn btn-warning mb-4 mt-2"> Tambah Mahasiswa</a>
 
   <div class="row">
    
