--- a/Templates/mahasiswa/ubah-mahasiswa.html
+++ b/Templates/mahasiswa/ubah-mahasiswa.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %} {% block kontenku %}
 
-<h2 class="display-6">Ubah Kontak</h2>
+<h2 class="display-6">Ubah Data Mahasiswa</h2>
 <hr />
 <div class="row justify-content-center">
     <div class="col-md-12">
