--- a/Templates/dashboard.html
+++ b/Templates/dashboard.html
@@ -14,14 +14,46 @@
   <div class="row">
     <div class="col-md-12"><br>   <br>
         <h4><center>ADMIN SIM</center></h4>
-        <table>
-          <tr>
-            <img src="coba.png" alt="">
-            
-          </tr>
-        </table>
-    </div>
+        <div class="row">
+    <div class="col-md-8">
+    <br>
+    <br>
+    <table>
+      <tr>
+        <td><img src="{{ url_for('static', filename='images/yulia.jpg')}}" style="width: 13.5rem; height: 100%; margin-right: 5rem;"></td>
+        <td><img src="{{ url_for('static', filename='images/yulia.jpg')}}" style="width: 13.5rem; height: 100%; margin-right: 5rem;"></td>
+        <td><img src="{{ url_for('static', filename='images/yulia.jpg')}}" style="width: 13.5rem; height: 100%; margin-right: 5rem;"></td>
+        <td><img src="{{ url_for('static', filename='images/yulia.jpg')}}" style="width: 13.5rem; height: 100%; margin-right: 5rem;"></td>
+      <tr>
+        <td>YULIA PIPKA ZILIWU</td>
+        <td>KEVIN REYNALDI PANJAITAN</td>
+        <td>KENNY ARAGON SIAHAAN</td>
+        <td>YURISHA ANINDYA</td>
+      </tr>
+    <tr>
+      <td>3312301035</td>
+      <td>3312301037</td>
+      <td>3312301045</td>
+      <td>3312301053</td>
+    </tr>
+    <tr>
+      <td>IF 1B</td>
+      <td>IF 1B</td>
+      <td>IF 1B</td>
+      <td>IF 1B</td>
+    </tr>
+    <tr>
+      <td>yulipipk@gmail.com</td>
+      <td>yulipipk@gmail.com</td>
+      <td>yulipipk@gmail.com</td>
+      <td>yulipipk@gmail.com</td>
+    </tr>
+  </table>
+    
+</div>
+
   </div>
 </div>
+
 
 {% endblock %}
