--- a/Templates/matakuliah/data-kuliah-kelas.html
+++ b/Templates/matakuliah/data-kuliah-kelas.html
@@ -4,6 +4,16 @@
   <h2 class="display-6">Manajemen Mata Kuliah</h2>
   <hr>
   <a href="/matakuliah/tambah" class="btn btn-dark mb-4 mt-2"> Tambah Mata Kuliah</a>
+  <div class="dropdown show">
+  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  Kelas</a>
+
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+    <a class="dropdown-item" href="#">Action</a>
+    <a class="dropdown-item" href="#">Another action</a>
+    <a class="dropdown-item" href="#">Something else here</a>
+  </div>
+</div>
 
   <div class="row">
    
