--- a/Templates/layout.html
+++ b/Templates/layout.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8" />
         <title>SIK WEBAPP</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
+
+        <!-- font awesome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     </head>
     <body style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
         <nav class="navbar navbar-expand-lg navbar-dark bg-info">
@@ -17,7 +20,7 @@
                         <a class="nav-link active aria-current="page" href="/dashboard" style="margin-right: 1rem;">Dashboard</a>
                         <a class="nav-link active" href="/mahasiswa" style="margin-right: 1rem;">Mahasiswa</a>
                         <a class="nav-link active" href="/matakuliah" style="margin-right: 1rem;">Mata Kuliah</a>
-                        <a class="nav-link active" href="/logout" style="margin-right: 1rem;">Logout</a>
+                        <a class="nav-link active" href="/logout" style="margin-right: 1rem;">Logout <i class="fa-solid fa-right-from-bracket"></i></a>
 
                     </div>
                 </div>
