--- a/Templates/layout.html
+++ b/Templates/layout.html
@@ -9,15 +9,15 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     </head>
     <body style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-info fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="/">
                     <h2 class="text-white fw-bold">SIM</h2>
                 </a>
 
                 <div>
-                    <div class="navbar-nav">
-                        <a class="nav-link active aria-current="page" href="/dashboard" style="margin-right: 1rem;">Dashboard</a>
+                    <div class="navbar-nav po">
+                        <a class="nav-link active" aria-current="page" href="/dashboard" style="margin-right: 1rem;">Dashboard</a>
                         <a class="nav-link active" href="/mahasiswa" style="margin-right: 1rem;">Mahasiswa</a>
                         <a class="nav-link active" href="/matakuliah" style="margin-right: 1rem;">Mata Kuliah</a>
                         <a class="nav-link active" href="/logout" style="margin-right: 1rem;">Logout <i class="fa-solid fa-right-from-bracket"></i></a>
