--- a/Templates/matakuliah/data-kuliah.html
+++ b/Templates/matakuliah/data-kuliah.html
@@ -5,15 +5,17 @@
   <hr>
   <a href="/matakuliah/tambah" class="btn btn-warning mb-1 mt-2"><i class="fa-solid fa-plus"></i> Tambah Mata Kuliah</a>
 
-  <div class="dropdown d-flex justify-content-end mb-3">
-    <button class="btn btn-warning dropdown-toggle " type="button" data-bs-toggle="dropdown" aria-expanded="false">
-      Kelas
-    </button>
-    <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="matakuliah/Prodi">IF</a></li>
-      <li><a class="dropdown-item" href="#">TRM</a></li>
-      <li><a class="dropdown-item" href="#">GM</a></li>
-    </ul>
+  <div class="d-flex justify-content-end mb-3">
+    <div class="dropdown ">
+      <button class="btn btn-warning dropdown-toggle " type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Program Studi
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="matakuliah/ProdiIF">IF</a></li>
+        <li><a class="dropdown-item" href="matakuliah/ProdiTRM">TRM</a></li>
+        <li><a class="dropdown-item" href="matakuliah/ProdiGM">GM</a></li>
+      </ul>
+    </div>
   </div>
 
   <div class="row">
@@ -25,7 +27,7 @@
           {{ message }}
       </div>
       {% endfor %} {% endif %} {% endwith %}
-      <table class="table table-striped">
+      <table class="table table-striped text-center">
         <thead>
           <tr class="bg-secondary text-white">
             <td>Kode</td>
