--- a/Templates/matakuliah/data-kuliah.html
+++ b/Templates/matakuliah/data-kuliah.html
@@ -11,9 +11,9 @@
         Program Studi
       </button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="matakuliah/ProdiIF">IF</a></li>
-        <li><a class="dropdown-item" href="matakuliah/ProdiTRM">TRM</a></li>
-        <li><a class="dropdown-item" href="matakuliah/ProdiGM">GM</a></li>
+        <li><a class="dropdown-item" href="matakuliah/IF">IF</a></li>
+        <li><a class="dropdown-item" href="matakuliah/TRM">TRM</a></li>
+        <li><a class="dropdown-item" href="matakuliah/GM">GM</a></li>
       </ul>
     </div>
   </div>
