--- a/Templates/mahasiswa/data-mahasiswa.html
+++ b/Templates/mahasiswa/data-mahasiswa.html
@@ -14,10 +14,10 @@
     {% endfor %} {% endif %} {% endwith %}
 
     <div class="col-md-12">
-      <table class="table table-striped">
+      <table class="table table-striped text-center">
         <thead>
           <tr class="bg-secondary text-white">
-            <td>ID</td>
+            <td>KODE</td>
             <td>NIM</td>
             <td>Nama Lengkap </td>
             <td>Alamat</td>
@@ -27,13 +27,13 @@
         <tbody>
           {% for item in mahasiswa %}
           <tr>
-            <td>{{item.0}}</td> 
+            <td>{{ item.0 }}</td> 
             <td>{{item.1}}</td>
             <td>{{item.2}}</td>
             <td>{{item.3}}</td>
             <td>
               <a href="/mahasiswa/edit/{{item.0}}" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i> Ubah</a>
-              <a href="/mahasiswa/delete/{{item.0}}" class="btn btn-danger btn-delete" onclick="confirm('Yakin???')"> <i class="fa-solid fa-trash"></i> Hapus</a>
+              <a href="/mahasiswa/delete/{{item.0}}" class="btn btn-danger btn-delete" onclick="return confirm('Yakin???')"> <i class="fa-solid fa-trash"></i> Hapus</a>
             </td>
           </tr>
           {% endfor %}
