nambahin matkul per prodi masih ga jalan, bingung slh nya dmn. perbaiki dashboard

--- a/Templates/dashboard.html
+++ b/Templates/dashboard.html
@@ -25,29 +25,17 @@ messages %}
   <div class="col-lg-12 d-flex justify-content-center ms-5">
     <table  cellpadding="10">
       <tr>
-        <td>
-          <img class="shadow rounded"
-            src="{{ url_for('static', filename='images/yulia.jpg')}}"
-            style="width: 13.5rem; height: 100%; margin-right: 5rem"
-          />
+        <td><a href="https://www.instagram.com/yuliapipka_z/">
+          <img class="shadow rounded" src="{{ url_for('static', filename='images/yulia.jpg')}}" style="width: 13.5rem; height: 100%; margin-right: 5rem"/></a>
         </td>
         <td>
-          <img class="shadow rounded" 
-            src="{{ url_for('static', filename='images/yulia.jpg')}}"
-            style="width: 13.5rem; height: 100%; margin-right: 5rem"
-          />
+          <a href="https://www.instagram.com/ray_pnjtn13/"><img class="shadow rounded" src="{{ url_for('static', filename='images/kevin.jpg')}}" style="width: 13.5rem; height: 100%; margin-right: 5rem"/></a>
         </td>
         <td>
-          <img class="shadow rounded" 
-            src="{{ url_for('static', filename='images/yulia.jpg')}}"
-            style="width: 13.5rem; height: 100%; margin-right: 5rem"
-          />
+          <a href="https://www.instagram.com/kenn_aragon/"><img class="shadow rounded" src="{{ url_for('static', filename='images/kenny.png')}}"style="width: 13.5rem; height: 100%; margin-right: 5rem"/></a>
         </td>
         <td>
-          <img class="shadow rounded" 
-            src="{{ url_for('static', filename='images/yulia.jpg')}}"
-            style="width: 13.5rem; height: 100%; margin-right: 5rem"
-          />
+          <a href="https://www.instagram.com/ryshhnidya/"><img class="shadow rounded" src="{{ url_for('static', filename='images/rysha.jpg')}}" style="width: 13.5rem; height: 100%; margin-right: 5rem"/></a>
         </td>
       </tr>
 
@@ -70,9 +58,9 @@ messages %}
         <td>IF 1B</td>
       </tr>
       <tr>
-        <td>yulipipk@gmail.com</td>
-        <td>yulipipk@gmail.com</td>
-        <td>yulipipk@gmail.com</td>
+        <td><a href="">yulipipk@gmail.com</a></td>
+        <td>kevinpanjaitan09@gmail.com</td>
+        <td>kennyaragonshn@gmail.com</td>
         <td>yurishaanindya154@gmail.com</td>
       </tr>
     </table>
