--- a/Templates/matakuliah/data-kuliah-prodi/main.html
+++ b/Templates/matakuliah/data-kuliah-prodi/main.html
@@ -13,6 +13,8 @@
         <li><a class="dropdown-item" href="IF">IF</a></li>
         <li><a class="dropdown-item" href="TRM">TRM</a></li>
         <li><a class="dropdown-item" href="GM">GM</a></li>
+        <li><a class="dropdown-item" href="RKS">RKS</a></li>
+        <li><a class="dropdown-item" href="TRPL">TRPL</a></li>
       </ul>
     </div>
     <div class="dropdown ">
@@ -20,7 +22,14 @@
         Semester
       </button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="matakuliah/Prodi">1 - 2</a></li>
+        <li><a class="dropdown-item" href="matakuliah/semester1">1</a></li>
+        <li><a class="dropdown-item" href="matakuliah/semester2">2</a></li>
+        <li><a class="dropdown-item" href="matakuliah/semester3">3</a></li>
+        <li><a class="dropdown-item" href="matakuliah/semester4">4</a></li>
+        <li><a class="dropdown-item" href="matakuliah/semester5">5</a></li>
+        <li><a class="dropdown-item" href="matakuliah/semester6">6</a></li>
+        <li><a class="dropdown-item" href="matakuliah/semester7">7</a></li>
+        <li><a class="dropdown-item" href="matakuliah/semester8">8</a></li>
         <li><a class="dropdown-item" href="#">3 - 4</a></li>
         <li><a class="dropdown-item" href="#">5 - 6</a></li>
       </ul>
