--- a/Templates/matakuliah/data-kuliah-prodi/matkul.html
+++ b/Templates/matakuliah/data-kuliah-prodi/matkul.html
@@ -51,5 +51,41 @@
     </tr>
     {% endfor %}
   </tbody>
+
+
+{% elif path == '/matakuliah/RKS' %}
+  <tbody>
+    {% for item in matakuliah %}
+    <tr>
+      <td>{{item.0}}</td> 
+      <td>{{item.1}}</td>
+      <td>{{item.2}}</td>
+      <td>{{item.3}}</td>
+      <td>{{item.4}}</td>
+      <td>
+        <a href="/matakuliah/edit/{{item.0}}" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i> Ubah</a>
+        <a href="/matakuliah/delete/{{item.0}}" class="btn btn-danger btn-delete" onclick="return confirm('Yakin???')"><i class="fa-solid fa-trash"></i> Hapus</a>
+      </td>
+    </tr>
+    {% endfor %}
+  </tbody>
+
+
+{% elif path == '/matakuliah/TRPL' %}
+  <tbody>
+    {% for item in matakuliah %}
+    <tr>
+      <td>{{item.0}}</td> 
+      <td>{{item.1}}</td>
+      <td>{{item.2}}</td>
+      <td>{{item.3}}</td>
+      <td>{{item.4}}</td>
+      <td>
+        <a href="/matakuliah/edit/{{item.0}}" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i> Ubah</a>
+        <a href="/matakuliah/delete/{{item.0}}" class="btn btn-danger btn-delete" onclick="return confirm('Yakin???')"><i class="fa-solid fa-trash"></i> Hapus</a>
+      </td>
+    </tr>
+    {% endfor %}
+  </tbody>
 {% endif %}
 {%endblock%}
