--- a/Templates/matakuliah/ubah-matakuliah.html
+++ b/Templates/matakuliah/ubah-matakuliah.html
@@ -59,6 +59,28 @@
             <option value="Teknik Informatika" {{ 'selected' if contact.4 =='Teknik Informatika' else '' }}>Teknik Informatika</option>
             <option value="Geomatika" {{ 'selected' if contact.4 =='Geomatika' else '' }}>Geomatika</option>
             <option value="Teknik Rekayasa Multimedia" {{ 'selected' if contact.4 =='Teknik Rekayasa Multimedia' else '' }}>Teknik Rekayasa Multimedia</option>
+            <option value="Teknik Rekayasa Perangkat Lunak" {{ 'selected' if contact.4 =='Teknik Rekayasa Perangkat Lunak' else '' }}>Teknik Rekayasa Perangkat Lunak</option>
+            <option value="Teknik Rekayasa Keamanan Siber" {{ 'selected' if contact.4 =='Teknik Rekayasa Keamanan Siber' else '' }}>Teknik Rekayasa Keamanan Siber</option>
+        </select>
+        </div>
+        <div class="mb-3">
+          <label for="semester" class="form-label">Semester</label>
+          <!-- <input
+            type="text"
+            name="programstudi"
+            value="{{contact.4}}"
+            class="form-control"
+          /> -->
+          <select name="semester" class="form-select" aria-label="Default select example">
+            <option selected disabled>-- Semester --</option>
+            <option value="semester1" {{ 'selected' if contact.4 =='semester1' else '' }}>Semester 1</option>
+            <option value="semester2" {{ 'selected' if contact.4 =='semester2' else '' }}>Semester 2</option>
+            <option value="semester3" {{ 'selected' if contact.4 =='semester3' else '' }}>Semester 3</option>
+            <option value="semester4" {{ 'selected' if contact.4 =='semester4' else '' }}>Semester 4</option>
+            <option value="semester5" {{ 'selected' if contact.4 =='semester5' else '' }}>Semester 5</option>
+            <option value="semester6" {{ 'selected' if contact.4 =='semester6' else '' }}>Semester 6</option>
+            <option value="semester7" {{ 'selected' if contact.4 =='semester7' else '' }}>Semester 7</option>
+            <option value="semester8" {{ 'selected' if contact.4 =='semester8' else '' }}>Semester 8</option>
         </select>
         </div>
         <div class="mb-3">
