perbaiki fitur prodi dan semester tapi makin hancur

--- a/Templates/matakuliah/data-kuliah-prodi/main.html
+++ b/Templates/matakuliah/data-kuliah-prodi/main.html
@@ -15,6 +15,7 @@
         <li><a class="dropdown-item" href="GM">GM</a></li>
         <li><a class="dropdown-item" href="RKS">RKS</a></li>
         <li><a class="dropdown-item" href="TRPL">TRPL</a></li>
+        <li><a class="dropdown-item" href="AN">AN</a></li>
       </ul>
     </div>
     <div class="dropdown ">
@@ -30,8 +31,6 @@
         <li><a class="dropdown-item" href="matakuliah/semester6">6</a></li>
         <li><a class="dropdown-item" href="matakuliah/semester7">7</a></li>
         <li><a class="dropdown-item" href="matakuliah/semester8">8</a></li>
-        <li><a class="dropdown-item" href="#">3 - 4</a></li>
-        <li><a class="dropdown-item" href="#">5 - 6</a></li>
       </ul>
     </div>
   </div>
