--- a/Templates/matakuliah/data-kuliah-prodi/semester.html
+++ b/Templates/matakuliah/data-kuliah-prodi/semester.html
@@ -1,7 +1,7 @@
 {% extends "matakuliah/data-kuliah-prodi/main.html" %}
 {% block table %}
 
-{% if path == '/matakuliah/IF' %}
+{% if path == '/matakuliah/semester1' %}
   <tbody>
     {% for item in matakuliah %}
     <tr>
@@ -10,7 +10,6 @@
       <td>{{item.2}}</td>
       <td>{{item.3}}</td>
       <td>{{item.4}}</td>
-      
       <td>
         <a href="/matakuliah/edit/{{item.0}}" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i> Ubah</a>
         <a href="/matakuliah/delete/{{item.0}}" class="btn btn-danger btn-delete" onclick="return confirm('Yakin???')"><i class="fa-solid fa-trash"></i> Hapus</a>
@@ -19,7 +18,7 @@
     {% endfor %}
   </tbody>
 
-{% elif path == '/matakuliah/TRM' %}
+{% if path == '/matakuliah/semester2' %}
   <tbody>
     {% for item in matakuliah %}
     <tr>
@@ -28,7 +27,6 @@
       <td>{{item.2}}</td>
       <td>{{item.3}}</td>
       <td>{{item.4}}</td>
-      <
       <td>
         <a href="/matakuliah/edit/{{item.0}}" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i> Ubah</a>
         <a href="/matakuliah/delete/{{item.0}}" class="btn btn-danger btn-delete" onclick="return confirm('Yakin???')"><i class="fa-solid fa-trash"></i> Hapus</a>
@@ -37,7 +35,7 @@
     {% endfor %}
   </tbody>
 
-{% elif path == '/matakuliah/GM' %}
+{% if path == '/matakuliah/semester3' %}
   <tbody>
     {% for item in matakuliah %}
     <tr>
@@ -46,7 +44,6 @@
       <td>{{item.2}}</td>
       <td>{{item.3}}</td>
       <td>{{item.4}}</td>
-      
       <td>
         <a href="/matakuliah/edit/{{item.0}}" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i> Ubah</a>
         <a href="/matakuliah/delete/{{item.0}}" class="btn btn-danger btn-delete" onclick="return confirm('Yakin???')"><i class="fa-solid fa-trash"></i> Hapus</a>
@@ -55,8 +52,7 @@
     {% endfor %}
   </tbody>
 
-
-{% elif path == '/matakuliah/RKS' %}
+{% if path == '/matakuliah/semester4' %}
   <tbody>
     {% for item in matakuliah %}
     <tr>
@@ -65,7 +61,6 @@
       <td>{{item.2}}</td>
       <td>{{item.3}}</td>
       <td>{{item.4}}</td>
-      
       <td>
         <a href="/matakuliah/edit/{{item.0}}" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i> Ubah</a>
         <a href="/matakuliah/delete/{{item.0}}" class="btn btn-danger btn-delete" onclick="return confirm('Yakin???')"><i class="fa-solid fa-trash"></i> Hapus</a>
@@ -74,8 +69,7 @@
     {% endfor %}
   </tbody>
 
-
-{% elif path == '/matakuliah/TRPL' %}
+{% if path == '/matakuliah/semester5' %}
   <tbody>
     {% for item in matakuliah %}
     <tr>
@@ -84,7 +78,6 @@
       <td>{{item.2}}</td>
       <td>{{item.3}}</td>
       <td>{{item.4}}</td>
-      
       <td>
         <a href="/matakuliah/edit/{{item.0}}" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i> Ubah</a>
         <a href="/matakuliah/delete/{{item.0}}" class="btn btn-danger btn-delete" onclick="return confirm('Yakin???')"><i class="fa-solid fa-trash"></i> Hapus</a>
@@ -93,7 +86,7 @@
     {% endfor %}
   </tbody>
 
-  {% elif path == '/matakuliah/AN' %}
+{% if path == '/matakuliah/semester6' %}
   <tbody>
     {% for item in matakuliah %}
     <tr>
@@ -102,8 +95,50 @@
       <td>{{item.2}}</td>
       <td>{{item.3}}</td>
       <td>{{item.4}}</td>
-      
       <td>
+        <a href="/matakuliah/edit/{{item.0}}" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i> Ubah</a>
+        <a href="/matakuliah/delete/{{item.0}}" class="btn btn-danger btn-delete" onclick="return confirm('Yakin???')"><i class="fa-solid fa-trash"></i> Hapus</a>
+      </td>
+    </tr>
+    {% endfor %}
+  </tbody>
+
+{% if path == '/matakuliah/semester7' %}
+  <tbody>
+    {% for item in matakuliah %}
+    <tr>
+      <td>{{item.0}}</td> 
+      <td>{{item.1}}</td>
+      <td>{{item.2}}</td>
+      <td>{{item.3}}</td>
+      <td>{{item.4}}</td>
+      <td>
+        <a href="/matakuliah/edit/{{item.0}}" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i> Ubah</a>
+        <a href="/matakuliah/delete/{{item.0}}" class="btn btn-danger btn-delete" onclick="return confirm('Yakin???')"><i class="fa-solid fa-trash"></i> Hapus</a>
+      </td>
+    </tr>
+    {% endfor %}
+  </tbody>
+
+{% if path == '/matakuliah/semester8' %}
+  <tbody>
+    {% for item in matakuliah %}
+    <tr>
+      <td>{{item.0}}</td> 
+      <td>{{item.1}}</td>
+      <td>{{item.2}}</td>
+      <td>{{item.3}}</td>
+      <td>{{item.4}}</td>
+      <td>
+        <a href="/matakuliah/edit/{{item.0}}" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i> Ubah</a>
+        <a href="/matakuliah/delete/{{item.0}}" class="btn btn-danger btn-delete" onclick="return confirm('Yakin???')"><i class="fa-solid fa-trash"></i> Hapus</a>
+      </td>
+    </tr>
+    {% endfor %}
+  </tbody>
+
+  
+
         <a href="/matakuliah/edit/{{item.0}}" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i> Ubah</a>
         <a href="/matakuliah/delete/{{item.0}}" class="btn btn-danger btn-delete" onclick="return confirm('Yakin???')"><i class="fa-solid fa-trash"></i> Hapus</a>
       </td>
