--- a/Templates/matakuliah/data-kuliah.html
+++ b/Templates/matakuliah/data-kuliah.html
@@ -16,6 +16,7 @@
         <li><a class="dropdown-item" href="matakuliah/GM">GM</a></li>
         <li><a class="dropdown-item" href="matakuliah/TRPL">TRPL</a></li>
         <li><a class="dropdown-item" href="matakuliah/RKS">RKS</a></li>
+        <li><a class="dropdown-item" href="matakuliah/AN">AN</a></li>
       </ul>
     </div>
   </div>
