--- a/Templates/matakuliah/tambah-matakuliah.html
+++ b/Templates/matakuliah/tambah-matakuliah.html
@@ -64,6 +64,7 @@
             <option value="Teknik Rekayasa Multimedia">Teknik Rekayasa Multimedia</option>
             <option value="Teknik Rekayasa Keamanan Siber">Rekayasa Keamanan Siber</option>
             <option value="Teknik Rekayasa Perangkat Lunak">Teknik Rekayasa Perangkat Lunak</option>
+            <option value="Animasi">Animasi</option>
           </select>
         </div>
         <div class="mb-3">
