--- a/Templates/matakuliah/ubah-matakuliah.html
+++ b/Templates/matakuliah/ubah-matakuliah.html
@@ -61,8 +61,10 @@
             <option value="Teknik Rekayasa Multimedia" {{ 'selected' if contact.4 =='Teknik Rekayasa Multimedia' else '' }}>Teknik Rekayasa Multimedia</option>
             <option value="Teknik Rekayasa Perangkat Lunak" {{ 'selected' if contact.4 =='Teknik Rekayasa Perangkat Lunak' else '' }}>Teknik Rekayasa Perangkat Lunak</option>
             <option value="Teknik Rekayasa Keamanan Siber" {{ 'selected' if contact.4 =='Teknik Rekayasa Keamanan Siber' else '' }}>Teknik Rekayasa Keamanan Siber</option>
+            <option value="Animasi" {{ 'selected' if contact.4 =='Animasi' else '' }}>Animasi</option>
         </select>
         </div>
+        
         <div class="mb-3">
           <label for="semester" class="form-label">Semester</label>
           <!-- <input
