--- a/Templates/login.html
+++ b/Templates/login.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}" />
+
 </head>
-<body>
+<body style="background-image= {{ url_for('static', filename='images/header.jpg') }}" />
 
 <div class="container mt-5">
     <div class="row justify-content-center">
